# induction-heater

.github/workflows/: kibot.yml
hardware/: .gitignore  induction-heater llc convertish.asc  induction-heater-manual-control.asc  induction-heater.asc
hardware/induction-heater-controller/: induction-heater-controller.kicad_pcb  induction-heater-controller.kicad_pro  induction-heater-controller.kicad_sch
hardware/induction-heater-powerstage/: induction-heater-powerstage.kicad_pcb  induction-heater-powerstage.kicad_pro  induction-heater-powerstage.kicad_sch
hardware/kicad/: #auto_saved_files#  .gitignore  _autosave-induction-heater.kicad_sch  docs.kibot.yml  induction-heater.kicad_pcb  induction-heater.kicad_prl  induction-heater.kicad_pro  induction-heater.kicad_sch
hardware/kicad/.kibot/: gerbers_jlcpcb.kibot.yml
software/ih-controller-firmware/: Cargo.toml
software/ih-controller-firmware/.cargo/: config.toml
software/ih-controller-firmware/src/: coil_driver.rs  coil_measure.rs  driver.rs  leds.rs  main.rs  measure.rs  modbus.rs  tacho_measure.rs
software/ih-modbus-cli/: Cargo.toml
software/ih-modbus-cli/src/: ih_modbus.rs  main.rs  tui.rs
