[package]
name = "ih-controller-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "time-driver-tim3", "stm32g030f6", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.2.1", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rmodbus = { version = "0.7.4", default-features = false, features = ["heapless"] }
static_cell = { version = "1.2.0", features = ["nightly"] }
heapless = { version = "0.7.16", features = ["defmt"] }

[profile.release]
lto = true
debug = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "c1da2c0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "c1da2c0" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "c1da2c0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "c1da2c0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "c1da2c0" }
