[package]
name = "ih-controller-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "time-driver-tim3", "stm32g030f6", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
rmodbus = { version = "0.7.4", default-features = false, features = ["heapless"] }
static_cell = { version = "1.2.0", features = ["nightly"] }
heapless = { version = "0.7.16", features = ["defmt"] }
stm32g0 = { version = "0.15.1", default-features = false, features = ["stm32g030"] }
critical-section = "1.1.2"
micromath = "2.0"

[profile.release]
lto = true
debug = true
opt-level = "z"
panic = "abort"
codegen-units = 1
incremental = false

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "5b3f75dc726afaf21b6c957b88f8eeb0c9ae322c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "5b3f75dc726afaf21b6c957b88f8eeb0c9ae322c" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "5b3f75dc726afaf21b6c957b88f8eeb0c9ae322c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "5b3f75dc726afaf21b6c957b88f8eeb0c9ae322c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "5b3f75dc726afaf21b6c957b88f8eeb0c9ae322c" }
