[package]
name = "ih-modbus-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
rmodbus = "0.7.4"
clap = { version = "4.4.0", features = ["derive"] }
ratatui = { version = "0.22.0", features = ["all-widgets"] }
anyhow = "1.0.75"
crossterm = "0.27.0"
getset = "0.1.2"
enumflags2 = "0.7.7"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
